# ucc-annotation

./: CMakeLists.txt  test.c
driver/: CMakeLists.txt  Makefile  mingw32.c  ucc.c
ucl/: CMakeLists.txt  dumpast.c  emit.c  gen.c  gen.h  reg.c  transtmt.c  x86.c
